--- a/templates/solution.html
+++ b/templates/solution.html
@@ -13,7 +13,7 @@
 
 <p>Uploaded by <a href="/user/{{ solution.user.username }}">{{ solution.user.username }}</a>
 {% if session['user_id'] == solution.user_id %}
- &mdash; <a href="/solution-delete/{{ solution.solution_id }}" style="color: #f00">[ Delete this solution ]</a>
+ &mdash; <a href="/solution-delete/{{ solution.solution_id }}" style="color: #D3AC3F">[ Delete this solution ]</a>
 {% endif %}
 </p>
 <ul>
