--- a/templates/solution_delete.html
+++ b/templates/solution_delete.html
@@ -7,5 +7,5 @@
 
 <p>Are you sure you want to delete a solution for "{{ solution.level.name }}"?</p>
 
-<p><a href="/solution/{{ solution.level.slug }}/{{ solution.solution_id }}">Cancel</a> / <a href="/solution-delete/{{ solution.solution_id }}?confirm=1" style="color:#f00; font-weight: bold">Confirm Deletion</a></p>
+<p><a href="/solution/{{ solution.level.slug }}/{{ solution.solution_id }}">Cancel</a> / <a href="/solution-delete/{{ solution.solution_id }}?confirm=1" style="color:#D3AC3F; font-weight: bold">Confirm Deletion</a></p>
 {% endblock %}
